--- a/Dragon Warrior 4 (NES)/Wiki/Dragon Warrior 4 (NES) - RAM map.wikitext
+++ b/Dragon Warrior 4 (NES)/Wiki/Dragon Warrior 4 (NES) - RAM map.wikitext
@@ -877,14 +877,17 @@ Index is <code>$07</code>.
 |  Stats  ||  $60f0  ||  byte  ||  Overworld Spells - n/a
 |}
 
-===Healie===
+===Extra Companion #1===
 
 Index is <code>$09</code>.
 
-Healie is $c5
-Hector is $c9
+Healie, Chapter 1, Kind Healer, $c5
+Orin, Chapter 4, Alchemist, $c6
+Laurent, Chapter 3, Troubadour, $c7
+Strom, Chapter 3, Guardsman, $c8
+Hector, Chapter 4, Young Man, $c9
+Panon, Chapter 5, Jester, $ca
 
-and also chap 3 mage, 610f to 6115, 80 3A 00 44 00 C7
 {| class="wikitable sortable"
 |-
 !  Category  !!  Address  !!  Size  !!  Description
@@ -909,7 +912,44 @@ and also chap 3 mage, 610f to 6115, 80 3A 00 44 00 C7
 |-
 |  Stats  ||  $6112 - $6113  ||  word  ||  Current MP
 |-
-|  Stats  ||  $6114  ||  byte  ||  ??? (value = $c5)
+|  Stats  ||  $6114  ||  byte  ||  Which Companion
+|}
+
+===Extra Companion #2===
+
+Index is <code>$0a</code>. [TODO: Verify!]
+
+Healie is $c5
+Chapter 3 mage is $c7
+Hector is $c9
+Panon is $ca
+
+and also chap 3 mage, 610f to 6115, 80 3A 00 44 00 C7
+{| class="wikitable sortable"
+|-
+!  Category  !!  Address  !!  Size  !!  Description
+|-  style="background-color: #eaecf0;"
+|  Stats  ||  $6115 # 0000_0001  ||  bit  ||  ...
+|-  style="background-color: #eaecf0;"
+|  Stats  ||  $6115 # 0000_0010  ||  bit  ||  ...
+|-  style="background-color: #eaecf0;"
+|  Stats  ||  $6115 # 0000_0100  ||  bit  ||  ...
+|-  style="background-color: #eaecf0;"
+|  Stats  ||  $6115 # 0000_1000  ||  bit  ||  ...
+|-  style="background-color: #eaecf0;"
+|  Stats  ||  $6115 # 0001_0000  ||  bit  ||  ...
+|-
+|  Stats  ||  $6115 # 0010_0000  ||  bit  ||  Poisoned
+|-
+|  Stats  ||  $6115 # 0100_0000  ||  bit  ||  Paralyzed
+|-
+|  Stats  ||  $6115 # 1000_0000  ||  bit  ||  1 = Alive, 0 = Dead
+|-
+|  Stats  ||  $6116 - $6117  ||  word  ||  Current HP
+|-
+|  Stats  ||  $6118 - $6119  ||  word  ||  Current MP
+|-
+|  Stats  ||  $611a  ||  byte  ||  Which Companion
 |}
 
 ==Return Locations==
@@ -1467,10 +1507,10 @@ The Chapter 2 item <code>Birdsong Nector</code> is not included here, must be an
 |-  style="background-color: #eaecf0;"
 |  colspan="7"  |  
 
-|-  style="background-color: #eaecf0;"
-|  Treasure  ||  $6274 # 0000_0001  ||  bit  ||  style="text-align: center;"  |  ...  ||  style="text-align: center;"  |  ...  ||  ...  ||  ...
-|-  style="background-color: #eaecf0;"
-|  Treasure  ||  $6274 # 0000_0010  ||  bit  ||  style="text-align: center;"  |  ...  ||  style="text-align: center;"  |  ...  ||  ...  ||  ...
+|-
+|  Treasure  ||  $6274 # 0000_0001  ||  bit  ||  style="text-align: center;"  |  $09  ||  style="text-align: center;"  |  $07  ||  Stancia - top-right house, F2, right pot  ||  Small Medal
+|-
+|  Treasure  ||  $6274 # 0000_0010  ||  bit  ||  style="text-align: center;"  |  $09  ||  style="text-align: center;"  |  $02  ||  Stancia - Castle, F1, Interior, top-right room, drawer #2  ||  Small Medal
 |-  style="background-color: #eaecf0;"
 |  Treasure  ||  $6274 # 0000_0100  ||  bit  ||  style="text-align: center;"  |  ...  ||  style="text-align: center;"  |  ...  ||  ...  ||  ...
 |-  style="background-color: #eaecf0;"
